[Fix] Menu z-index

--- a/src/assets/css/layout.css
+++ b/src/assets/css/layout.css
@@ -46,7 +46,7 @@ body {
 
 .menu-icon-wrapper {
   display: none;
-  z-index: 9999;
+  z-index: 99999;
 }
 .menu-icon-wrapper:hover {
   cursor: pointer;
@@ -66,6 +66,7 @@ body {
   }
   #menu.active {
     margin-top: 0%;
+    z-index: 9999;
   }
   #menu.not-active {
     margin-top: -2000px;
